Windows: Don't re-apply application badge if one has not been set

We need to re-apply the application badge when the color scheme changes;
when a task bar button is being created for the fist time; or after Explorer
has crashed and re-started.

But we should only do that if the user has set an application badge
via our APIs. Otherwise we might end up clearing an existing badge
that was set via the native APIs directly.

Fixes: QTBUG-118117
Pick-to: 6.5
Change-Id: I1f1fecba44c118d4e3f7ef4119139c3ebd23f047
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 8f2828683e2ac44a282e8f061de1c76925abcec1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>